--- a/app/Components/Main/PopUp/Details.css
+++ b/app/Components/Main/PopUp/Details.css
@@ -123,7 +123,7 @@
   filter: contrast(105%);
 }
 
-.details .content-main .icon-details .currColor{
+.details .content-main .icon-details .currColor {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -141,9 +141,35 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.details .content-main .icon-details .currColor:hover{
+.details .content-main .icon-details .currColor .wrapper .color-name:hover {
   color: #FFFFFF;
 }
+
+.details .content-main .icon-details .currColor .wrapper {
+  position: relative;
+}
+
+.details .content-main .currColor .wrapper .tooltip {
+  z-index: 90;
+  position: absolute;
+  bottom: -100%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background-color: var(--background-color);
+  filter: contrast(120%);
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.2rem;
+  display: none;
+}
+
+.details .content-main .currColor:hover .tooltip {
+  display: flex;
+}
+
 
 .details .content-main .icon-details .icon>svg {
   width: var(--svg-width);
