--- a/app/Components/Main/PopUp/Details.css
+++ b/app/Components/Main/PopUp/Details.css
@@ -7,7 +7,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  backdrop-filter: brightness(70%) blur(1px);
 
   z-index: 15;
 }
@@ -27,6 +26,7 @@
   width: 100%;
   height: 100%;
   z-index: 16;
+  background-color: #0003;
 }
 
 .details .wrapper .content {
