--- a/app/assets/Loading.css
+++ b/app/assets/Loading.css
@@ -8,6 +8,9 @@
   align-items: center;
   justify-content: center;
   z-index: 80;
+
+  --offset: 188;
+  --duration: 1.8s;
 }
 
 .loading-screen .loading-wrapper {
@@ -60,4 +63,46 @@
 
 .loading-screen .content .text {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+.spinner {
+  animation: rotator var(--duration) linear infinite;
+}
+
+@keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+.path {
+  stroke-dasharray: var(--offset);
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  animation:
+    dash var(--duration) ease-in-out infinite;
+}
+
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: var(--offset);
+  }
+
+  50% {
+    stroke-dashoffset: 40;
+    transform: rotate(135deg);
+  }
+
+  100% {
+    stroke-dashoffset: var(--offset);
+    transform: rotate(450deg);
+  }
+
 }
