--- a/app/Components/Main/PopUp/Details.css
+++ b/app/Components/Main/PopUp/Details.css
@@ -95,6 +95,9 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  background-color: var(--background-color);
+  border-radius: 0.3rem;
+  filter: contrast(105%);
 }
 
 .details .content-main .icon-details .icon {
@@ -103,9 +106,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--background-color);
-  border-radius: 0.3rem;
-  filter: contrast(105%);
+  scale: calc(var(--svg-width) / 100) calc(var(--svg-height) / 100);
+  transition: scale 300ms ease;
+}
+
+.details .content-main .icon-details .icon>svg {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .details .content-main .icon-details .scheme-toggle {
@@ -129,9 +139,7 @@
   left: 50%;
   transform: translate(-50%, 0);
   font-size: 0.9rem;
-  /* background-color: var(--background-color); */
   background-color: var(--card-color);
-  /* filter: contrast(120%); */
   color: #FFFFFFAA;
   padding: 0.2rem 0.6rem;
   border-top-left-radius: 0.2rem;
@@ -141,7 +149,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.details .content-main .icon-details .currColor .wrapper .color-name:hover {
+.details .content-main .icon-details .currColor:hover .wrapper .color-name {
   color: #FFFFFF;
 }
 
@@ -171,13 +179,6 @@
 }
 
 
-.details .content-main .icon-details .icon>svg {
-  width: var(--svg-width);
-  height: var(--svg-height);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .details .content-main .icon-details .reset_button {
   position: absolute;
