--- a/app/Components/Main/PopUp/Details.css
+++ b/app/Components/Main/PopUp/Details.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 150dvh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,6 +16,7 @@
   height: 100%;
   position: relative;
   display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -30,7 +31,6 @@
 }
 
 .details .wrapper .content {
-  transform: translate(0, 2rem);
   width: 600px;
   height: max-content;
   background-color: #313539;
@@ -406,7 +406,8 @@ input::-webkit-outer-spin-button {
 
 @media screen and (max-width: 660px) {
   .details .wrapper .content {
-    width: 320px;
+    width: 60%;
+    max-width: 340px;
   }
 
   .details .top .details-title {
@@ -422,7 +423,57 @@ input::-webkit-outer-spin-button {
   }
 
   .details .content-main .icon-details {
-    width: 100%;
-    aspect-ratio: 1 / 1;
+    width: 55vw;
+    height: 55vw;
+    max-width: 280px;
+    max-height: 280px;
   }
+
+  .details .content-main .sidebar .color-options {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 0.8rem;
+  }
+
+  .details .content-main .sidebar .color-options .color-option {
+    height: 1.2rem;
+    width: 1.2rem;
+    aspect-ratio: 1/1;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    border-radius: 50%;
+  }
+}
+
+
+
+@media screen and (max-width: 460px) {
+
+  .details .bottom .buttons .btn .text,
+  .details .bottom .buttons .btn svg {
+    height: 1rem;
+    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+}
+
+
+
+@media screen and (max-width: 360px) {
+
+  .details .bottom .buttons .btn .text,
+  .details .bottom .buttons .btn svg {
+    height: 0.9rem;
+    font-size: 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
 }
