--- a/app/Components/Main/Main.css
+++ b/app/Components/Main/Main.css
@@ -24,7 +24,7 @@ main .toast-notifications {
 main .notification-wrapper {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: column;
   margin: 0;
@@ -111,7 +111,8 @@ main .notification-wrapper .toast .title {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  /* font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.05rem;
   margin: 0 0.3rem;
   padding: 0;
@@ -227,10 +228,13 @@ main .pageination-buttons .buttons .btn.disabled {
     min-width: 1.3rem;
   }
 
+  main .toast-notifications {
+    bottom: 0.3rem;
+  }
 
   main .notification-wrapper .toast {
     margin: 0.3rem 0;
-    padding: 0.2rem 0.5rem;
+    padding: 0.3rem 0.5rem;
     max-width: 16rem;
   }
 
