--- a/app/Components/Main/Cards.css
+++ b/app/Components/Main/Cards.css
@@ -13,9 +13,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 
   --grid-cols: 8;
   overflow: hidden;
+}
+
+.ad_space {
+  width: 100%;
+  height: 16rem;
 }
 
 .cards .wrapper {
